# ecu-security-lab

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docker/: Dockerfile  setup-vcan.sh
docs/: DEMO.md  DESIGN.md  INTERVIEW-NOTES.md  UDS-primer.md  VULNERABILITIES.md
ecu/: CMakeLists.txt
ecu/backends/: socketcan.c
ecu/include/: isotp.h  server.h  socketcan.h  transport.h  uds.h
ecu/src/: isotp.c  main.c  server.c  uds.c
ecu/tests/: test_isotp.c  test_security.c  test_uds.c
tests/: test_e2e.py  test_smoke.py  test_toolkit.py
toolkit/: README.md  pyproject.toml
toolkit/ecutk/: __init__.py  attacks.py  bus.py  cli.py  client.py  isotp.py  uds.py
