[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ecutk"
version = "0.1.0"
description = "Offensive toolkit for the ECU Security Lab target"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jelaletdin Seytjanov" }]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ecutk = "ecutk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecutk*"]
